unpackaged/main/default/objects/Shipment_Tracking__c/Shipment_Tracking__c.object-meta.xml
<CustomObject>
    <label>Shipment Tracking</label>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Shipment Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>