unpackaged/main/default/objects/Shipment_Tracking__c/fields/Account_Payable_Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Account_Payable_Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Payable Invoice Line Item</label>
    <referenceTo>varcpq__Account_Payable_Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Shipment Tracking</relationshipLabel>
    <relationshipName>Shipment_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>