unpackaged/main/default/objects/Shipment_Tracking__c/fields/Accounts_Payable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts Payable Invoice</label>
    <referenceTo>varcpq__Accounts_Payable_Invoice__c</referenceTo>
    <relationshipLabel>Shipment Tracking</relationshipLabel>
    <relationshipName>Shipment_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>