unpackaged/main/default/objects/Shipment_Tracking__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Shipment Tracking</relationshipLabel>
    <relationshipName>Shipment_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>