unpackaged/main/default/objects/Shipment_Tracking__c/fields/Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice ID</label>
    <referenceTo>varcpq__Invoice__c</referenceTo>
    <relationshipLabel>Shipment Tracking</relationshipLabel>
    <relationshipName>Shipment_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>