unpackaged/main/default/objects/Shipment_Tracking__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <referenceTo>varcpq__Purchase_Order__c</referenceTo>
    <relationshipLabel>Shipment Tracking</relationshipLabel>
    <relationshipName>Shipment_Tracking</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>