unpackaged/main/default/objects/Shipment_Tracking__c/fields/Sales_Order_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Record_ID__c</fullName>
    <formula>Accounts_Payable_Invoice__r.Sales_Order__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Record ID</label>
    <type>Text</type>
</CustomField>