unpackaged/main/default/objects/Shipment_Tracking__c/fields/Serial_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Serial_Numbers__c</fullName>
    <label>Serial Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>