unpackaged/main/default/objects/Shipment_Tracking__c/fields/Tracking_Key__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Key__c</fullName>
    <externalId>true</externalId>
    <label>Tracking Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>